-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 18.0.0
-
None
-
-
05df96967 (dev), 7e3943881 (6.10)
on some files, scrolling down can cause the UI to flicker.
see attached video:
- scrolling in qcocoaapplication.h is fine (both up and down)
- scrolling up in qcocoaapplicationdelegate.h is fine, scrolling down causes some flickering
it seems to be caused by the parse errors, as the flickering goes away when #import <AppKit/NSApplication.h> is added to make the header self-contained
For Gerrit Dashboard: QTCREATORBUG-33334 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
669571,2 | Cocoa: make headers self-contained | dev | qt/qtbase | Status: MERGED | +2 | 0 |
669744,2 | Cocoa: make headers self-contained | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |