Cocoa: make headers self-contained

Clang-based IDEs like QtCreator try to parse the headers in isolation
and warn if some types are not defined.
Including the required headers makes the codebase more robust.

Task-number: QTCREATORBUG-33334
Change-Id: I7819d0ca947a7c857a49d85ce3076d4e965afa72
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 05df96967ecce6b93afffd436d4f15cdc7c5b565)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>